2011-01-26  Ryosuke Niwa  <rniwa@webkit.org>

        Layout test missing expectation after 58524
        https://bugs.webkit.org/show_bug.cgi?id=38360

        Unreviewed; Chromium rebaselines.

        * platform/chromium-linux/fast/images/svg-background-partial-redraw-expected.checksum: Added.
        * platform/chromium-linux/fast/images/svg-background-partial-redraw-expected.png: Added.
        * platform/chromium-win/fast/images/svg-background-partial-redraw-expected.checksum: Added.
        * platform/chromium-win/fast/images/svg-background-partial-redraw-expected.png: Added.
        * platform/chromium-win/fast/images/svg-background-partial-redraw-expected.txt: Added.
        * platform/chromium-win/svg/carto.net/tabgroup-expected.txt: Added.
        * platform/chromium/test_expectations.txt:

2011-01-26  Carlos Garcia Campos  <cgarcia@igalia.com>

        Reviewed by Martin Robinson.

        [cairo] Use CAIRO_OPERATOR_DARKEN when available
        https://bugs.webkit.org/show_bug.cgi?id=53084

        * platform/gtk/Skipped: Unskip test.
        * platform/gtk/fast/canvas/canvas-composite-expected.checksum: Added.
        * platform/gtk/fast/canvas/canvas-composite-expected.png: Added.
        * platform/gtk/fast/canvas/canvas-composite-expected.txt: Added.

2011-01-26  Ryosuke Niwa  <rniwa@webkit.org>

        Unreviewed Chromium rebaselines for r76688.

        * platform/chromium-linux/fast/backgrounds/size/contain-and-cover-expected.checksum:
        * platform/chromium-linux/fast/backgrounds/size/contain-and-cover-expected.png:
        * platform/chromium-linux/fast/backgrounds/svg-as-background-5-expected.checksum:
        * platform/chromium-linux/fast/backgrounds/svg-as-background-5-expected.png:
        * platform/chromium-linux/svg/W3C-SVG-1.1/animate-elem-33-t-expected.checksum:
        * platform/chromium-linux/svg/W3C-SVG-1.1/animate-elem-33-t-expected.png: