@@ -1,0 +1,5 @@
+Tests that evaluate in console works even if window.console is substituted or deleted. Bug 53072
+
+1
+2
+
