@@ -1,3 +1,15 @@
+2011-01-25  Pavel Podivilov  <podivilov@chromium.org>
+
+        Reviewed by Pavel Feldman.
+
+        Web Inspector: evaluate in console may not work when window.console is substituted or deleted.
+        https://bugs.webkit.org/show_bug.cgi?id=53072
+
+        Test: inspector/console-substituted.html
+
+        * inspector/InjectedScriptSource.js:
+        (.):
+
 2011-01-26  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         Reviewed by Martin Robinson.
